# boilermates

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/boilermates/: Cargo.toml
crates/boilermates-impl/: Cargo.toml
crates/boilermates-impl/src/: attributes.rs  lib.rs  model.rs  util.rs
crates/boilermates-impl/src/snapshots/: boilermates_impl__test__sanity_check.snap  boilermates_impl__test__snapshot_test.snap  boilermates_impl__test__snapshot_test.snap.new
crates/boilermates-macro/: Cargo.toml
crates/boilermates-macro/src/: lib.rs
crates/boilermates/src/: lib.rs
crates/boilermates/tests/: simple_conversions.rs
src/: lib.rs
