
[workspace]
members = [ 
  "crates/boilermates-macro",
  "crates/boilermates",
  "crates/boilermates-impl",
]
resolver = "2"

[workspace.dependencies]
boilermates-macro = { path = "./crates/boilermates-macro" }
boilermates-impl = { path = "./crates/boilermates-impl" }
proc-macro2 = { version = "1" }
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
prettyplease = { version = "0.2" }
insta = { version = "1" }
indexmap = { version = "2" }