
[workspace]
members = [ 
  "crates/boilermates-macro",
  "crates/boilermates",
  "crates/boilermates-impl",
]
resolver = "2"

[workspace.dependencies]
boilermates-macro = { path = "./crates/boilermates-macro" }
boilermates-impl = { path = "./crates/boilermates-impl" }
proc-macro2 = { version = "1" }
syn = { version = "1" }
quote = { version = "1" }
prettyplease = { version = "0.1" }
insta = { version = "1" }
indexmap = { version = "2" }
heck = { version = "0.5" }
nestify = { version = "0.3"}
anyhow = { version = "1" }
itertools = { version = "0.14" }