[package]
name = "boilermates-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
quote = { workspace = true } 
indexmap = { workspace = true }
heck = { workspace = true }
nestify = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true }